Basics van vliegtuigen maken
Maken van een vliegtuig en displayen op de webpagina

--- a/Vliegtuig/pom.xml
+++ b/Vliegtuig/pom.xml
@@ -39,6 +39,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--REST REPOSITORY-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+        <!--HAL: INFO BIJ LOCALHOST:8080 OVER GET/SET ETC-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-hal-browser</artifactId>
+            <version>3.0.8.RELEASE</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
@@ -46,6 +58,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<addResources>true</addResources>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
