--- a/Vliegtuig/pom.xml
+++ b/Vliegtuig/pom.xml
@@ -50,8 +50,18 @@
             <artifactId>spring-data-rest-hal-browser</artifactId>
             <version>3.0.8.RELEASE</version>
         </dependency>
+        <!-- DEPENDENCY MOCKITO -->
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.23.4</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
